changed guest to away
rewording the html content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="col col-guest">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="score-container">
                     <p class="score score-guest" id="guest-score">0</p>
                 </div>
